# Nabdcode

./: .env.example  .gitignore  .provider_state_sess_ad43dd9.json  AGENT.md  ARCHITECTURE_DNA.md  FINAL_REPORT.md  MEMORY.md  README.md  STATE.md  agent_executor.py  ammar.md  buggy_math.py  collect.py  collect_forensics.sh  forensics_report.md  forensics_report1.md  forensics_report2.md  forensics_report3.md  forensics_report4.md  forensics_report5.md  forensics_report6.md  forensics_report7.md  forensics_report8.md  forensics_report9.md  hello_nabd.py  index.html  install.sh  live_surgery.py  llm_router.py  main.py  nabd_logo.py  pyproject.toml  requirements.txt  run_dag_test.py  run_e2e_test.py  server.py  setup.py  start_agent_server.sh  test_dispatcher.py  test_model.txt
adapters/: __init__.py  lightpanda_adapter.py
core/: __init__.py  _env.py  adapters.py  agent_manager.py  agent_observer.py  app_context.py  bootloader.py  cancellation.py  config.py  constants.py  context_compactor.py  context_manager.py  dashboard.py  diff_matrix.py  display.py  errors.py  evidence.py  evidence_claim_check.py  fc_schemas.py  gateway.py  hybrid_retriever.py  investigation.py  llm.py  logger.py  memory.py  memory_manager.py  memory_store.py  metrics.py  model_registry.py  monitoring.py  multi_agent_orchestrator.py  output_renderer.py  parser.py  permissions.py  project_root_guard.py  prompts.py  repo_scanner.py  retry.py  sanitize.py  scaffolder.py  (+23 more)
docs/: stage6_probe_results.md
engine/: __init__.py  _budget.py  _context.py  _convergence.py  _loop_helpers.py  _loop_types.py  (+14 more)
(+158 files in other folders)
