[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nabd-os"
version = "1.0.0"
description = "Local AI Agent OS & TUI specialized for Termux and Edge Devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
]

[project.scripts]
nabdcode = "main:main"

[tool.setuptools]
py-modules = ["main", "llm_router", "nabd_logo"]
packages = ["core", "engine", "tools", "ui"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
